--- a/index.html
+++ b/index.html
@@ -13,10 +13,40 @@
     <script src="js/jquery-ui.min.js"></script>
 
     <link rel="stylesheet" href="css/style.css">
-    <script type="application/javascript" src="js/main.js"></script>
+    <script src="js/main.js"></script>
 
 </head>
 <body>
+
+    <div class="content_container">
+
+        <!-- Panel One -->
+        <div class="item panel_one hidden" data-panel="0">
+            <div class="wrapper">
+                <h1 class="hidden">Quizzer</h1>
+                <div class="start_quiz">
+                    Start Quiz
+                </div>
+            </div>
+        </div>
+
+        <!-- Panel Two -->
+        <div class="item panel_two hidden" data-panel="1">
+            <div class="wrapper">
+                Quiz two
+            </div>
+        </div>
+
+        <div class="error">
+            Please make a selection
+        </div>
+        <div class="progress">
+            <div class="bar">
+
+            </div>
+        </div>
+
+    </div>
 
 </body>
 </html>
