--- a/index.html
+++ b/index.html
@@ -33,7 +33,13 @@
         <!-- Panel Two -->
         <div class="item panel_two hidden" data-panel="1">
             <div class="wrapper">
-                Quiz two
+                <h3>How do You drink your beer?</h3>
+                <div class="options">
+                    <div>Very cold</div>
+                    <div>Warm</div>
+                    <div>I do not drink</div>
+                </div>
+                <div class="next_question">Next question</div>
             </div>
         </div>
 
