--- a/index.html
+++ b/index.html
@@ -39,7 +39,53 @@
                     <div>Warm</div>
                     <div>I do not drink</div>
                 </div>
-                <div class="next_question">Next question</div>
+                <div class="next_question" data-next="2">Next question</div>
+            </div>
+        </div>
+
+        <!-- Panel Three -->
+        <div class="item panel_three hidden" data-panel="2">
+            <div class="wrapper">
+                <h3>What do You think about Trump?</h3>
+                <div class="options">
+                    <div>I love him</div>
+                    <div>I hate him</div>
+                    <div>I really do not care!</div>
+                </div>
+                <div class="next_question" data-next="3">Next question</div>
+            </div>
+        </div>
+
+        <!-- Panel Four-->
+        <div class="item panel_four hidden" data-panel="3">
+            <div class="wrapper">
+                <h3>Say what again...</h3>
+                <div class="options">
+                    <div>I dare You</div>
+                    <div>If You can</div>
+                    <div>...what!</div>
+                </div>
+                <div class="next_question" data-next="4">Next question</div>
+            </div>
+        </div>
+
+        <!-- Panel Five-->
+        <div class="item panel_five hidden" data-panel="4">
+            <div class="wrapper">
+                <h3>Who's gonna win?</h3>
+                <div class="options">
+                    <div>Rock</div>
+                    <div>Pop</div>
+                    <div>Jazz</div>
+                </div>
+                <div class="next_question" data-next="5">Next question</div>
+            </div>
+        </div>
+
+        <!-- Panel Six-->
+        <div class="item panel_five hidden" data-panel="5">
+            <div class="wrapper">
+                <h3>Thank you for participating</h3>
             </div>
         </div>
 
